--- a/src/Todo/index.html
+++ b/src/Todo/index.html
@@ -15,21 +15,15 @@
 
 <ul>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>under 80 per line</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>look into <code>safe_save</code> performance
-
-<ul>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>related to prettify option</li>
-</ul></li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>look into bs4 <code>__init__</code> performance</li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>test image support</li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>test case sensitive</li>
 </ul></li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>document
 
 <ul>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>README 25%</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>README 50%</li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>How to create a theme</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>What is going on in code</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>Comment in code</li>
 </ul></li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>Improvement
 
@@ -38,23 +32,14 @@
 
 <ul>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>log warning</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>log generated file</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled checked>log generated file</li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>log how much time spent</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>color</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled checked>color</li>
 </ul></li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>dev mode</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>search post
-
-<ul>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>javascript in theme</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>python generate index file</li>
-</ul></li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>Index post and page content</li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>Site map</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>More meta option</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>status?</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>perm-link?</li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>RSS</li>
-<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>SEO</li>
+<li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>Build modified/new page only</li>
 </ul></li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled><p>find a name for the blog builder</p></li>
 <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled>theme
